Update OpenApi Specs into one file and added JWT authorization
Literally what summary says
