# Kletis/server/controllers/usersController.js
@@ -1,5 +1,7 @@
 const User = require('../models/User');
 const bcrypt = require('bcrypt');
+const jwt = require('jsonwebtoken');
+const mongoose = require('mongoose');
 
 
 const isValidEmail = (email) => {
@@ -19,6 +21,28 @@ exports.getAllUsers = async (req, res) => {
     }
 }
 
+exports.loginUser = async (req, res) => {
+    const {email, password} = req.body;
+    try{
+        const user = await user.findOne({email})
+        if(!user){
+            return res.status(400).json({error: 'Invalid email'})
+        }
+        const isMatch = await bcrypt.compare(password, user.password);
+        if(!isMatch){
+            return res.status(404).json({error: 'Invalid password'})
+        }
+
+        const token = jwt.sign({id: user._id, type: user.type }, process.env.JWT_SECRET, {expiresIn: '1h'})
+
+        res.json({token})
+
+    }
+    catch(error){
+        console.log(error)
+        res.status(500).json({error: 'Error logging in'})
+    }
+}
 // GET a single user by ID
 
 exports.getUserById = async (req, res) => {
